--- a/templates/index.html
+++ b/templates/index.html
@@ -43,6 +43,11 @@
                             <i class="fas fa-envelope me-1"></i>Contact Us
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="">
+                            <i class="fas fa-users me-1"></i>Login/SignUp
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
