--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">
+                        <a class="nav-link" href="{{ url_for('login') }}">
                             <i class="fas fa-users me-1"></i>Login/SignUp
                         </a>
                     </li>
