--- a/templates/login.html
+++ b/templates/login.html
@@ -196,7 +196,7 @@
     </form>
     <div class="extra-links">
       <a href="#">Forgot Password?</a> | 
-      <a href="#">Sign Up</a>
+      <a href="{{ url_for('signup') }}">Sign Up</a>
     </div>
   </div>
 </body>
